# reproschema-protocol-cookiecutter

./: .cliff.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml  requirements.txt  test_cookiecutter.py  update_schema_version.py
.github/: pull_request_template.md
.github/workflows/: autoupdate_schema_version.yaml  autoupdate_schema_version.yml  release.yml  test-cookiecutter.yml  test-generated-project.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.protocol_name}}/: LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.protocol_name}}/.github/workflows/: build_deploy.yaml  deploy-gh-pages.yml
{{cookiecutter.protocol_name}}/activities/Activity1/: activity1_schema
{{cookiecutter.protocol_name}}/activities/Activity1/items/: document_upload_item
{{cookiecutter.protocol_name}}/activities/Activity2/: Activity2_schema
{{cookiecutter.protocol_name}}/activities/Activity2/items/: country_item  date_item  language_item  state_item  time_range_item  year_item
{{cookiecutter.protocol_name}}/activities/Activity3/: Activity3_schema
{{cookiecutter.protocol_name}}/activities/Activity3/items/: email_item  float_item  integer_item  multitext_item  participant_id_item  text_item  textarea_item
{{cookiecutter.protocol_name}}/activities/selectActivity/: selectActivity_schema
{{cookiecutter.protocol_name}}/activities/selectActivity/items/: radio_item  radio_item_multiple_choice  select_item  select_item_multiple_choice  slider_item
{{cookiecutter.protocol_name}}/activities/voiceActivity/: voiceActivity_schema
{{cookiecutter.protocol_name}}/activities/voiceActivity/items/: audio_check_item  audio_image_record_item  audio_number_record_item  audio_passage_record_item
{{cookiecutter.protocol_name}}/licenses/: BSD-3  CC-4  CC-NC-4
{{cookiecutter.protocol_name}}/ui-changes/src/: config.js
{{cookiecutter.protocol_name}}/{{cookiecutter.__protocol_slug}}/: README.md  {{cookiecutter.__protocol_slug}}_schema
