[tool.poetry]
name = "{{cookiecutter.__protocol_slug}}"
version = "0.1.0"
description = "{{cookiecutter.protocol_description}}"
authors = ["{{cookiecutter.__author}}"]
license = "{{cookiecutter.license}}"
readme = "README.md"
include = ["README.md", "{{cookiecutter.__protocol_slug}}", "activities"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
reproschema = "^<version_number>"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

